crates/beancount-tree-sitter/test/corpus/incomplete_accounts.txt
==================
Incomplete uppercase account
==================

2023-10-01 * "payee" "narration"
  A

---

(file
  (transaction
    date: (date)
    txn: (txn)
    payee: (payee)
    narration: (narration)
    (posting
      account: (account))))

==================
Incomplete lowercase account
==================

2023-10-01 * "payee" "narration"
  a

---

(file
  (transaction
    date: (date)
    txn: (txn)
    payee: (payee)
    narration: (narration))
  (ERROR
    (identifier)))

==================
Incomplete mixed case account
==================

2023-10-01 * "payee" "narration"
  As

---

(file
  (transaction
    date: (date)
    txn: (txn)
    payee: (payee)
    narration: (narration)
    (posting
      account: (account))))

==================
Multiple incomplete accounts
==================

2023-10-01 * "payee" "narration"
  A
  Asset
  Expenses

---

(file
  (transaction
    date: (date)
    txn: (txn)
    payee: (payee)
    narration: (narration)
    (posting
      account: (account))
    (posting
      account: (account))
    (posting
      account: (account))))
