crates/beancount-tree-sitter/test/corpus/markdown_orgmode.txt
==============
3 markdown headings
==============

# Title
## Sub-title
### Section

2014-04-20 * "Money from CC" ^610fa7f17e7a #trip
    Expenses:Restaurant         100 USD
    Assets:US:Cash             -100 USD

---

(file
  (headline
    (item))
  (headline
    (item))
  (headline
    (item))
  (transaction
    (date)
    (txn)
    (narration)
    (tags_links
      (link)
      (tag))
    (posting
      (account)
      (incomplete_amount
        (number)
        (currency)))
    (posting
      (account)
      (incomplete_amount
        (unary_number_expr
          (minus)
          (number))
        (currency)))))

==============
2 markdown headings
==============

# First
# Second

---

(file
  (headline
    (item))
  (headline
    (item)))
