crates/beancount-tree-sitter/test/corpus/multi_line.txt
====
Multiple Lines
====

2014-07-11 * "Hello one line
and yet another,
and why not another!"
    Expenses:Restaurant         100 USD
    Assets:Cash                -100 USD

---

(file
  (transaction
    (date)
    (txn)
    (narration)
    (posting
      (account)
      (incomplete_amount
        (number)
        (currency)))
    (posting
      (account)
      (incomplete_amount
        (unary_number_expr
          (minus)
          (number))
        (currency)))))
